修复伽罗宝石、糖果派对bug